@@ -74,6 +74,7 @@ Don Brown
 Don Ferguson
 Don Jeffery
 Drew Sudell
+Eduard Wirch
 Edwin Woudt
 Eli Tucker
 Emmanuel Bourg
