@@ -320,6 +320,10 @@
     <last>Sudell</last>
   </name>
   <name>
+    <first>Eduard</first>
+    <last>Wirch</last>
+  </name>
+  <name>
     <first>Edwin</first>
     <last>Woudt</last>
   </name>
